--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-pandas==1.5.3
-scikit-learn==1.2.2
-streamlit==1.31.1
-xgboost==1.7.6
-imbalanced-learn==0.10.1
-matplotlib==3.7.1
-seaborn==0.12.2
+pandas==2.2.3
+scikit-learn==1.6.1
+streamlit==1.45.1
+xgboost==3.0.1
+imbalanced-learn==0.13.0
+matplotlib==3.10.3
+seaborn==0.13.2
 streamlit-elements==0.1.0
+numpy==2.2.6
